fixed distorted profile pictures

--- a/app/assets/stylesheets/shared/profile.css.sass
+++ b/app/assets/stylesheets/shared/profile.css.sass
@@ -5,7 +5,7 @@
   background-color: #ffffff
   background-repeat: no-repeat
   background-position: center center
-  background-size: 100% 100%
+  background-size: cover
 
 #user-profile
   padding-bottom: 13px
